# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = src data docs

dist_pkgdata_DATA = README.md pixmaps/dict2.xpm dict2.glade
dist_noinst_DATA = dict2.desktop dict2.gladep TODO applications/dict2.desktop
nobase_data_DATA = applications/dict2.desktop
